@@ -33,19 +33,26 @@ public class JavaTestRunnerTest implements TestSuiteClass {
         when(provider.classLoaderFor(ALL_ELEMENTS)).thenReturn(classLoader);
         return provider;
     }
-    private ClassLoaderProvider providerFor(Class<?> classToLoad) throws ClassLoaderProvider.ClassLoadingException, ClassNotFoundException {
+    private ClassLoaderProvider providerFor(Class<?>... classesToLoad) throws ClassLoaderProvider.ClassLoadingException, ClassNotFoundException {
         var provider = mock(ClassLoaderProvider.class);
         var classLoader = mock(ClassLoader.class);
-        doReturn(classToLoad).when(classLoader).loadClass(eq(classToLoad.getName()));
+        for(var classToLoad : classesToLoad) {
+            doReturn(classToLoad).when(classLoader).loadClass(eq(classToLoad.getName()));
+        }
         when(provider.classLoaderFor(ALL_ELEMENTS)).thenReturn(classLoader);
         return provider;
     }
 
     private JavaTestRunner.Result runWithRunners(Class<?> testClass) throws ClassNotFoundException, ClassLoaderProvider.ClassLoadingException, DependencyResolutionRequiredException {
         var mavenProject = projectWithExpectedClasspathDependencies();
-        var testRunners = testClass.getName();
         var classLoaderProvider = providerFor(testClass);
-        return new JavaTestRunner(Optional.of(testRunners), classLoaderProvider, mavenProject).run();
+        return new JavaTestRunner(Optional.of(testClass.getName()), Optional.empty(), classLoaderProvider, mavenProject).run();
+    }
+
+    private JavaTestRunner.Result runWithRunnersAndConfig(Class<?> testClass, Class<?> configClass) throws ClassNotFoundException, ClassLoaderProvider.ClassLoadingException, DependencyResolutionRequiredException {
+        var mavenProject = projectWithExpectedClasspathDependencies();
+        var classLoaderProvider = providerFor(testClass, configClass);
+        return new JavaTestRunner(Optional.of(testClass.getName()), Optional.of(configClass.getName()), classLoaderProvider, mavenProject).run();
     }
 
     @Override
@@ -54,14 +61,14 @@ public class JavaTestRunnerTest implements TestSuiteClass {
                 test("Test failure to get test classpath elements", () -> {
                     var mavenProject = mock(MavenProject.class);
                     doThrow(DependencyResolutionRequiredException.class).when(mavenProject).getTestClasspathElements();
-                    var result = new JavaTestRunner(null, null, mavenProject).run();
+                    var result = new JavaTestRunner(null, Optional.empty(), null, mavenProject).run();
                     return that(result.status == JavaTestRunner.Status.EXECUTION_FAILURE, "Should return an execution failure");
                 }),
                 test("Test failure load classpath elements", () -> {
                     var mavenProject = projectWithExpectedClasspathDependencies();
                     var classLoaderProvider = mock(ClassLoaderProvider.class);
                     doThrow(ClassLoaderProvider.ClassLoadingException.class).when(classLoaderProvider).classLoaderFor(eq(ALL_ELEMENTS));
-                    var result = new JavaTestRunner(null, classLoaderProvider, mavenProject).run();
+                    var result = new JavaTestRunner(null, Optional.empty(), classLoaderProvider, mavenProject).run();
                     return that(result.status == JavaTestRunner.Status.EXECUTION_FAILURE, "Should return an execution failure");
                 }),
                 test("Test when test runners class cannot be loaded", () -> {
@@ -70,7 +77,7 @@ public class JavaTestRunnerTest implements TestSuiteClass {
                     var classLoader = mock(ClassLoader.class);
                     doThrow(ClassNotFoundException.class).when(classLoader).loadClass(runners);
                     var classLoaderProvider = providerFor(classLoader);
-                    var result = new JavaTestRunner(Optional.of(runners), classLoaderProvider, mavenProject).run();
+                    var result = new JavaTestRunner(Optional.of(runners), Optional.empty(), classLoaderProvider, mavenProject).run();
                     return that(result.status == JavaTestRunner.Status.EXECUTION_FAILURE, "Should return an execution failure");
                 }),
                 test("Test when test runners class does not extend TestRunners", () -> {
@@ -88,6 +95,26 @@ public class JavaTestRunnerTest implements TestSuiteClass {
                 test("Test when all tests from runners pass", () -> {
                     var result = runWithRunners(RunnersWithPassingTests.class);
                     return that(result.status == JavaTestRunner.Status.SUCCESS, "Should return a success");
+                }),
+                test("Test when configuration class cannot be loaded", () -> {
+                    var mavenProject = projectWithExpectedClasspathDependencies();
+                    var runners = "org.foo.Bar";
+                    var config = "org.foo.Baz";
+                    var classLoader = mock(ClassLoader.class);
+                    doReturn(RunnersWithPassingTests.class).when(classLoader).loadClass(runners);
+                    doThrow(ClassNotFoundException.class).when(classLoader).loadClass(config);
+                    var classLoaderProvider = providerFor(classLoader);
+                    var result = new JavaTestRunner(Optional.of(runners), Optional.of(config), classLoaderProvider, mavenProject).run();
+                    return that(result.status == JavaTestRunner.Status.EXECUTION_FAILURE, "Should return an execution failure");
+                }),
+                test("Test when configuration class does not extend RunConfigurationProvider", () -> {
+                    var result = runWithRunnersAndConfig(RunnersWithPassingTests.class, IncorrectTypeClass.class);
+                    return that(result.status == JavaTestRunner.Status.FAILURE, "Should return a failure");
+                }),
+                test("Test that configuration class is used", () -> {
+                    var result = runWithRunnersAndConfig(RunnersWithPassingTests.class, CustomRunConfiguration.class);
+                    return that(result.status == JavaTestRunner.Status.SUCCESS, "Should return a success")
+                            .and(that(CustomRunConfiguration.wasUsed, "Should have used the custom configuration"));
                 })
         );
     }
@@ -107,8 +134,7 @@ public class JavaTestRunnerTest implements TestSuiteClass {
         @Override
         public Collection<TestRunner> runners() {
             return List.of(JavaTest.testableRunner(
-                    List.of(test("Failure", () -> that(false, "Expected false"))),
-                    Collections.emptyList()
+                    List.of(test("Failure", () -> that(false, "Expected false")))
             ));
         }
     }
@@ -116,9 +142,18 @@ public class JavaTestRunnerTest implements TestSuiteClass {
         @Override
         public Collection<TestRunner> runners() {
             return List.of(JavaTest.testableRunner(
-                    List.of(test("Success", () -> that(true, "Expected true"))),
-                    Collections.emptyList()
+                    List.of(test("Success", () -> that(true, "Expected true")))
             ));
+        }
+    }
+
+    public static class CustomRunConfiguration implements RunConfigurationProvider {
+
+        public static boolean wasUsed = false;
+
+        @Override
+        public RunConfiguration config() {
+            return RunConfiguration.empty().addRunObserver(result -> wasUsed = true);
         }
     }
 
